--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Directories #
+l# Directories #
 /build/
 /bin/
 target/
@@ -7,6 +7,7 @@ target/
 .DS_Store
  
 *.class
+*.orig
  
 # Package Files #
 *.jar
